invoice: Added null checks for all invoice resources